--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ lazy-object-proxy==1.6.0
 mac-remote-command==0.0.5
 MarkupSafe==2.0.1
 mccabe==0.6.1
+oled-status==0.0.3
 pylint==2.9.6
 pyserial==3.5
 python-engineio==4.2.1
