--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 anyio==3.3.0
 astroid==2.6.6
+backports.entry-points-selectable==1.1.0
 bidict==0.21.2
 certifi==2021.5.30
 charset-normalizer==2.0.4
 click==8.0.1
 colorama==0.4.4
+distlib==0.3.2
 dnspython==1.16.0
 eventlet==0.31.1
+filelock==3.0.12
 Flask==2.0.1
 Flask-SocketIO==5.1.1
-getmac==0.8.2
+-e git+https://github.com/FlantasticDan/getmac.git@f84b7fa2594e69a1c78970d512f74f4f9bca2c69#egg=getmac
 greenlet==1.1.1
+gunicorn==20.0.4
 h11==0.12.0
 httpcore==0.13.6
 httpx==0.18.2
@@ -22,18 +26,30 @@ lazy-object-proxy==1.6.0
 mac-remote-command==0.0.5
 MarkupSafe==2.0.1
 mccabe==0.6.1
+mpmath==1.1.0
+numpy==1.19.5
 oled-status==0.0.3
+opencv-python==4.5.1.48
+packaging==21.0
+Pillow==8.0.1
+platformdirs==2.3.0
+pluggy==1.0.0
+py==1.10.0
 pylint==2.9.6
+pyparsing==2.4.7
 pyserial==3.5
 python-engineio==4.2.1
 python-socketio==5.4.0
 requests==2.26.0
 rfc3986==1.5.0
-git+https://github.com/FlantasticDan/scorebox-consoles.git@wrestling
+scorebox-consoles==1.2.0
 six==1.16.0
 sniffio==1.2.0
+sympy==1.7.1
 toml==0.10.2
+tox==3.24.3
 urllib3==1.26.6
+virtualenv==20.7.2
 websocket-client==1.2.1
 Werkzeug==2.0.1
 wrapt==1.12.1
